manifests/base/application-controller/argocd-application-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-application-controller
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: argocd-application-controller
