manifests/base/application-controller/argocd-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: argocd-metrics
    app.kubernetes.io/name: argo-cd
  name: argocd-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/component: application-controller
